Minor update - resolved display overflow big and bug occuring when the user clicks an operator after the equals sign

--- a/style.css
+++ b/style.css
@@ -44,11 +44,14 @@
   justify-content: end;
   align-items: end;
   padding: 16px;
+  max-width: 152px;
 }
 
 .display-text {
   color: white;
   font-size: 2rem;
+  max-width: 100%;
+  overflow: scroll;
 }
 
 .row {
